Sun Dec 30 18:07:51 2001  Guillaume Morin  <gmorin@gnu.org>

    * configure.in: automake fixes (fp_ -> AC, +AC_INIT_AUTOMAKE)

Fri Oct 11 22:09:45 1996  Bob Glickstein  <bobg@hiro.zanshin.com>

	* stow.html, configure.in: Version 1.3.2.

	* README, stow.texi: Correct the URL again.

Fri Oct 11 18:20:42 1996  Bob Glickstein  <bobg@hiro.zanshin.com>

	* configure.in: Version 1.3.1.

	* stow.html: Update Stow manual URL.  Mention version 1.3.1.

	* README: Update Stow URL.

	* Makefile.am: stow-manual.html -> manual.html.

	* stow.texi:
	Add a reference to the Stow home page on the GNU web server.  Change
	several occurrences of "which" to "that" for grammatical superiority.

Wed Oct  9 00:34:07 1996  Bob Glickstein  <bobg@hiro.zanshin.com>

	* Makefile.am:
	Add maintainer-only rules for stow-manual.html and stow-manual.texi.

Wed Oct  9 00:32:31 1996  Bob Glickstein  <bobg@hiro.zanshin.com>

	* README: Refer to the new location for the Stow home page.

	* stow.html: Make it right for the GNU web server.

Tue Oct  8 21:54:09 1996  Bob Glickstein  <bobg@hiro.zanshin.com>

	* stow.texi: Document --restow

	* stow.in: Add --restow (-R) option

	* configure.in: Add "perl4" to search for Perl binary.
	Bump version number to 1.3.

Mon Jun 24 23:23:03 1996  Bob Glickstein  <bobg@hiro.zanshin.com>

	* stow.texi: Delete trailing whitespace.

Fri Jun 21 19:44:26 1996  Bob Glickstein  <bobg@hiro.zanshin.com>

	* Makefile.am:
	Don't explicitly mention version.texi.  Automake now does it
 	automagically, by noticing the `@include version.texi' in
 	stow.texi.  Awesome.

	* stow.texi:
	Use @include instead of @input.  This is more Texinfoid, plus
	allows Automake to automatically deduce the need for
	version.texi.

	* stow.in:
	Elide trailing slashes from package names, then complain if
	package names have slashes in them.

Tue Jun 18 23:19:04 1996  Bob Glickstein  <bobg@hiro.zanshin.com>

	* README: Call it "Gnu Stow".
