@@ -1,8 +1,9 @@
 #!@PERL@
 
 # GNU Stow - manage the installation of multiple software packages
-# Copyright 1993, 1994, 1995, 1996 by Bob Glickstein
-#
+# Copyright (C) 1993, 1994, 1995, 1996 by Bob Glickstein
+# Copyright (C) 2000,2001 Guillaume Morin
+# 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation; either version 2 of the License, or
@@ -17,6 +18,9 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 
+require 5.005;
+use POSIX;
+
 $ProgramName = $0;
 $ProgramName =~ s,.*/,,;
 
@@ -27,7 +31,7 @@ $Delete = 0;
 $NotReally = 0;
 $Verbose = 0;
 $ReportHelp = 0;
-$Stow = &fastcwd;
+$Stow = undef;
 $Target = undef;
 $Restow = 0;
 
@@ -105,10 +109,15 @@ while (@ARGV && ($_ = $ARGV[0]) && /^-/) {
 
 &usage("No packages named") unless @ARGV;
 
+if ($Stow) {
+  chdir($Stow) || die "Cannot chdir to target tree $Stow ($!)\n";
+}
+$Stow = &getcwd;
+
 $Target = &parent($Stow) unless $Target;
 
 chdir($Target) || die "Cannot chdir to target tree $Target ($!)\n";
-$Target = &fastcwd;
+$Target = &getcwd;
 
 foreach $package (@ARGV) {
   $package =~ s,/+$,,;		# delete trailing slashes
@@ -149,8 +158,13 @@ sub RelativePath {
   local(@b) = split(/\/+/, $b);
   local(@c) = split(/\/+/, $c);
 
-  splice(@a, 0, @c + 0);
-  splice(@b, 0, @c + 0);
+  # if $c == "/something", scalar(@c) >= 2
+  # but if $c == "/", scalar(@c) == 0
+  # but we want 1
+  my $length = scalar(@c) ? scalar(@c) : 1;
+  splice(@a, 0, $length);
+  splice(@b, 0, $length);
+
   unshift(@b, (('..') x (@a + 0)));
   &JoinPaths(@b);
 }
@@ -178,6 +192,7 @@ sub Unstow {
   local(@stowmember);
   local($pure, $othercollection) = (1, '');
   local($subpure, $subother);
+  local($empty) = (1);
   local(@puresubdirs);
 
   return (0, '') if (&JoinPaths($Target, $targetdir) eq $Stow);
@@ -190,6 +205,7 @@ sub Unstow {
   closedir(DIR);
   foreach $content (@contents) {
     next if (($content eq '.') || ($content eq '..'));
+    $empty = 0;
     if (-l &JoinPaths($Target, $targetdir, $content)) {
       ($linktarget = readlink(&JoinPaths($Target,
 					 $targetdir,
@@ -240,6 +256,7 @@ sub Unstow {
       $pure = 0;
     }
   }
+  $pure = 0 if $empty;
   if ((!$pure || !$targetdir) && @puresubdirs) {
     &CoalesceTrees($targetdir, $stow, @puresubdirs);
   }
