@@ -1,3 +1,0 @@
-@set UPDATED 11 October 1996
-@set EDITION 1.3.2
-@set VERSION 1.3.2
